# hwordle

./: .env  .gitignore  .hc  README.md  default.nix  package-lock.json  package.json
.gitold/: config  index  packed-refs
.gitold/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  update.sample
.gitold/objects/pack/: pack-3bcb5b6e04b7e10e459ff441566bc2b8e101a512.idx  pack-3bcb5b6e04b7e10e459ff441566bc2b8e101a512.pack
.gitold/refs/heads/: main
dna/coordinator_zomes/zome_0/: Cargo.toml
dna/coordinator_zomes/zome_0/src/: lib.rs  stored_game_state.rs
dna/coordinator_zomes/zome_1/: Cargo.toml
dna/coordinator_zomes/zome_1/src/: lib.rs  stats.rs
dna/integrity_zomes/zome_0_integrity/: Cargo.toml
dna/integrity_zomes/zome_1_integrity/: Cargo.toml
dna/workdir/: dna.yaml  dna_0.dna
nix/: sources.json
public/: index.html  manifest.json
src/: .goutputstream-MKGTR1  App.svelte  App.tsx  App.tsxWORKING  App.tsxexperiment  App.tsxtemp
src/components/alerts/: Alert.tsx
src/components/grid/: Grid.tsx
src/components/modals/: StatsModal.tsx
src/components/stats/: EmigratePanel.tsx  Histogram.tsx  StatBar.tsx
src/constants/: strings.ts
src/context/: AlertContext.tsx
src/lib/: share.ts  stats.ts
src/types/dna_0/: zome_0.ts  zome_1.ts
workdir/: happ.yaml  hwordle.happ  my-app3.happold  react-wordle.happ  web-happ.yaml  web-happ.yamlold
(+194 files in other folders)
