[package]
edition = "2021"
name = "zome_1"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zome_1"

[dependencies]
serde = "=1.0.136"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
zome_1_integrity = { path = "../../integrity_zomes/zome_1_integrity" }

hdk = "0.0.154"
